/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam.football;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf.football";
option java_outer_classname = "BallFieldSideStateStreamElementPayloadProtos";

// Payload of a ballFieldSideState stream element
// TODO: The Ball Field Side Worker is a relatively useless worker that was only introduced to check if StreamTeam can perform Deep Learning based analyses. Remove this file as soon as there is a more meaningful Deep Learning based analysis worker.
message BallFieldSideStateStreamElementPayload {

    bool ballOnLeftSide = 1; // Flag indicating if the ball is on the left side of the field
}

// Object identifiers, group identifiers and positions in the content:
// objectIdentifiers empty
// groupIdentifiers empty
// positions empty